--- a/contact/templates/contact/index.html
+++ b/contact/templates/contact/index.html
@@ -1,1 +1,2 @@
-{% extends "global/base.html" %}
+{% extends "global/base.html" %} {% block content %} {% for contact in contacts
+%} {{contact.first_name}} {% endfor %} {% endblock content %}
